Удален тег <br> в заголовке слайда на главной странице

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <img src="img/carousel-3.png" alt="Квадрокоптер">
             </div>
             <div class="carousel-list-text-wrapper">
-              <b>Порхает как бабочка,<br>жалит как пчела!</b>
+              <b>Порхает как бабочка, жалит как пчела!</b>
               <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
               <table class="carousel-parameters">
                 <tr>
