Изменена сетка блоков "Фильтр", "Сортировка" на сранице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -92,10 +92,44 @@
         <li class="breadcrumbs-current">Моноподы для селфи</li>
       </ul>
     </div>
+
+
+
+    <div class="catalog-wrapper-top">
+
+      <div class="catalog-wrapper-top-left">
+        <p>Фильтр:</p>
+      </div>
+
+      <div class="catalog-wrapper-top-rgiht">
+        <div class="sort-wrapper">
+          <section class="sort">
+
+            <h2>Сортировка:</h2>
+            <ul class="sort-params">
+              <li class="sort-params--current">
+                <a href="#">По цене</a>
+              </li>
+              <li>
+                <a href="#">По типу</a>
+              </li>
+              <li>
+                <a href="#">По популярности</a>
+              </li>
+            </ul>
+            <div class="sort-direction">
+              <a class="sort-direction-arrow sort-direction-arrow-inc" href="#"><span class="visually-hidden">По возрастанию</span></a>
+              <a class="sort-direction-arrow sort-direction-arrow-dec sort-direction--current" href="#"><span class="visually-hidden">По убыванию</span></a>
+            </div>
+          </section>
+        </div>
+      </div>
+    </div>
+
     <div class="catalog-colum-wrapper">
       <div class="catalog-colum-wrapper-left">
         <section class="filters">
-          <h2>Фильтр:</h2>
+          <h2 class="visually-hidden">Фильтр:</h2>
           <form class="filter" action="https://echo.htmlacademy.ru" method="get">
             <fieldset>
               <legend>Стоимость</legend>
@@ -175,29 +209,7 @@
 
         <section class="catalog">
           <h2 class="visually-hidden">Список моноподов для селфи</h2>
-
-          <div class="sort-wrapper">
-            <section class="sort">
-
-              <h2>Сортировка:</h2>
-              <ul class="sort-params">
-                <li class="sort-params--current">
-                  <a href="#">По цене</a>
-                </li>
-                <li>
-                  <a href="#">По типу</a>
-                </li>
-                <li>
-                  <a href="#">По популярности</a>
-                </li>
-              </ul>
-              <div class="sort-direction">
-                <a class="sort-direction-arrow sort-direction-arrow-inc" href="#"><span class="visually-hidden">По возрастанию</span></a>
-                <a class="sort-direction-arrow sort-direction-arrow-dec sort-direction--current" href="#"><span class="visually-hidden">По убыванию</span></a>
-              </div>
-            </section>
-          </div>
-
+          
           <div class="catalog-wrapper">
             <ul class="catalog-list">
               <li class="catalog-item">
@@ -367,7 +379,7 @@
     <button class="modal-button" type="button">Закрыть</button>
   </section>
 
-<script src="js/index.js"></script>
+  <script src="js/index.js"></script>
 
 </body>
 
