Добавлены недостающие размеры изображениям

--- a/catalog.html
+++ b/catalog.html
@@ -209,7 +209,7 @@
 
         <section class="catalog">
           <h2 class="visually-hidden">Список моноподов для селфи</h2>
-          
+
           <div class="catalog-wrapper">
             <ul class="catalog-list">
               <li class="catalog-item">
@@ -353,7 +353,7 @@
           </li>
         </ul>
         <a class="htmlacademy-logo" href="//htmlacademy.ru/intensive/htmlcss">
-          <img src="img/logo-htmlacademy.svg" alt="Логотип HTML Academy">
+          <img src="img/logo-htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
         </a>
       </div>
     </div>
