--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <ul class="carousel-list">
           <li class="carousel-list-item carousel-list-item--current" data-number="1">
             <div class="carousel-list-image-wrapper">
-              <img src="img/carousel-1.png" alt="Селфи-палка">
+              <img src="img/carousel-1.png" width="384" height="486" alt="Селфи-палка">
             </div>
             <div class="carousel-list-text-wrapper">
               <b>Делай селфи,<br>как Бен Стиллер!</b>
@@ -112,7 +112,7 @@
           </li>
           <li class="carousel-list-item" data-number="2">
             <div class="carousel-list-image-wrapper ">
-              <img src="img/carousel-2.png" alt="Фитнес-браслет">
+              <img src="img/carousel-2.png" width="345" height="485" alt="Фитнес-браслет">
             </div>
             <div class="carousel-list-text-wrapper">
               <b>Худеем<br>правильно!</b>
@@ -130,7 +130,7 @@
           </li>
           <li class="carousel-list-item" data-number="3">
             <div class="carousel-list-image-wrapper">
-              <img src="img/carousel-3.png" alt="Квадрокоптер">
+              <img src="img/carousel-3.png" width="526" height="334" alt="Квадрокоптер">
             </div>
             <div class="carousel-list-text-wrapper">
               <b>Порхает как бабочка, жалит как пчела!</b>
@@ -336,7 +336,7 @@
           </li>
         </ul>
         <a class="htmlacademy-logo" href="//htmlacademy.ru/intensive/htmlcss">
-          <img src="img/logo-htmlacademy.svg" alt="Логотип HTML Academy">
+          <img src="img/logo-htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
         </a>
       </div>
     </div>
