--- a/catalog.html
+++ b/catalog.html
@@ -25,17 +25,28 @@
             </div>
           </form>
           <div class="user-navigation">
-            <a class="profile" href="user.html"><svg xmlns="http://www.w3.org/2000/svg" width="13" height="12">
-                <path fill="#272525" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z" /></svg>Валентин Петухов</a>
+            <a class="profile" href="user.html">
+              <svg xmlns="http://www.w3.org/2000/svg" width="13" height="12">
+                <path fill="#272525" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z" />
+              </svg>
+              Валентин Петухов
+            </a>
             <a class="logout" href="#">Выйти</a>
           </div>
           <div class="goods-navigation">
-            <a class="compare" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="10" height="10">
-                <path d="M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z" /></svg>Сравнить</a>
-
-            <a class="basket" href="#"> <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
+            <a class="compare" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10">
+                <path d="M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z" />
+              </svg>
+              Сравнить
+            </a>
+            <a class="basket" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
                 <path fill="#272525" d="M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z" />
-                <path fill="#272525" d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z" /></svg>Корзина</a>
+                <path fill="#272525" d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z" />
+              </svg>
+              Корзина
+            </a>
           </div>
         </div>
         <ul class="site-navigation">
@@ -92,19 +103,14 @@
         <li class="breadcrumbs-current">Моноподы для селфи</li>
       </ul>
     </div>
-
-
-
     <div class="catalog-wrapper-top">
-
       <div class="catalog-wrapper-top-left">
         <p>Фильтр:</p>
       </div>
-
       <div class="catalog-wrapper-top-rgiht">
         <div class="sort-wrapper">
-          <section class="sort">
 
+          <section class="sort">
             <h2>Сортировка:</h2>
             <ul class="sort-params">
               <li class="sort-params--current">
@@ -118,18 +124,25 @@
               </li>
             </ul>
             <div class="sort-direction">
-              <a class="sort-direction-arrow sort-direction-arrow-inc" href="#"><span class="visually-hidden">По возрастанию</span></a>
-              <a class="sort-direction-arrow sort-direction-arrow-dec sort-direction--current" href="#"><span class="visually-hidden">По убыванию</span></a>
+              <a class="sort-direction-arrow sort-direction-arrow-inc" href="#">
+                <span class="visually-hidden">По возрастанию</span>
+              </a>
+              <a class="sort-direction-arrow sort-direction-arrow-dec sort-direction--current" href="#">
+                <span class="visually-hidden">По убыванию</span>
+              </a>
             </div>
           </section>
+
         </div>
       </div>
     </div>
 
     <div class="catalog-colum-wrapper">
       <div class="catalog-colum-wrapper-left">
+
         <section class="filters">
           <h2 class="visually-hidden">Фильтр:</h2>
+
           <form class="filter" action="https://echo.htmlacademy.ru" method="get">
             <fieldset>
               <legend>Стоимость</legend>
@@ -142,8 +155,12 @@
                   <div class="toggle toggle-max"></div>
                 </div>
                 <div class="price-controls">
-                  <label class="min-price">от <input name="min-price" type="text" value="0"></label>
-                  <label class="max-price">до <input name="max-price" type="text" value="5000"></label>
+                  <label class="min-price">
+                    от <input name="min-price" type="text" value="0">
+                  </label>
+                  <label class="max-price">
+                    до <input name="max-price" type="text" value="5000">
+                  </label>
                 </div>
               </div>
             </fieldset>
@@ -204,7 +221,6 @@
         </section>
 
       </div>
-
       <div class="catalog-colum-wrapper-right">
 
         <section class="catalog">
@@ -297,6 +313,7 @@
             </ul>
           </div>
         </section>
+
       </div>
     </div>
 
@@ -304,25 +321,35 @@
 
   <footer class="main-footer">
     <div class="main-footer-wrapper container">
-
       <div class="main-footer-top-wrapper">
         <a class="main-footer-logo" href="index.html">
           <img src="img/logo-device-yellow.svg" width="163" height="35" alt="Логотип Девайс">
         </a>
         <div class="user-navigation user-navigation-footer">
-          <a class="profile" href="user.html"><svg xmlns="http://www.w3.org/2000/svg" width="13" height="12">
-              <path fill="#ffc600" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z" /></svg>Валентин Петухов</a>
+          <a class="profile" href="user.html">
+            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="12">
+              <path fill="#ffc600" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z" />
+            </svg>
+            Валентин Петухов
+          </a>
           <a class="logout" href="#">Выйти</a>
         </div>
         <div class="goods-navigation goods-navigation-footer">
-          <a class="compare" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="10" height="10">
-              <path fill="#ffc600" d="M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z" /></svg>Сравнить</a>
-          <a class="basket" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
+          <a class="compare" href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10">
+              <path fill="#ffc600" d="M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z" />
+            </svg>
+            Сравнить
+          </a>
+          <a class="basket" href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
               <path fill="#ffc600" d="M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z" />
-              <path fill="#ffc600" d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z" /></svg>Корзина</a>
+              <path fill="#ffc600" d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z" />
+            </svg>
+            Корзина
+          </a>
         </div>
       </div>
-
       <div class="main-footer-middle-wrapper">
         <address>г. Москва, ул. Строителей, 15</address>
         <ul class="site-navigation site-navigation-footer ">
