--- a/index.html
+++ b/index.html
@@ -24,16 +24,27 @@
             </div>
           </form>
           <div class="user-navigation">
-            <a class="login" href="login.html"> <svg xmlns="http://www.w3.org/2000/svg" width="13" height="12">
-                <path fill="#272525" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z" /></svg>Войти</a>
+            <a class="login" href="login.html">
+              <svg xmlns="http://www.w3.org/2000/svg" width="13" height="12">
+                <path fill="#272525" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z" />
+              </svg>
+              Войти
+            </a>
           </div>
           <div class="goods-navigation">
-            <a class="compare" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="10" height="10">
-                <path d="M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z" /></svg>Сравнить</a>
-
-            <a class="basket" href="#"> <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
+            <a class="compare" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10">
+                <path d="M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z" />
+              </svg>
+              Сравнить
+            </a>
+            <a class="basket" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
                 <path fill="#272525" d="M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z" />
-                <path fill="#272525" d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z" /></svg>Корзина</a>
+                <path fill="#272525" d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z" />
+              </svg>
+              Корзина
+            </a>
           </div>
         </div>
         <ul class="site-navigation">
@@ -295,15 +306,23 @@
           <img src="img/logo-device-yellow.svg" width="163" height="35" alt="Логотип Девайс">
         </a>
         <div class="user-navigation user-navigation-footer">
-          <a class="login" href="login.html"><svg xmlns="http://www.w3.org/2000/svg" width="13" height="12">
-              <path fill="#ffc600" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z" /></svg>Войти</a>
+          <a class="login" href="login.html">
+            <svg xmlns="http://www.w3.org/2000/svg" width="13" height="12">
+              <path fill="#ffc600" d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z" />
+            </svg>
+            Войти
+          </a>
         </div>
         <div class="goods-navigation goods-navigation-footer">
-          <a class="compare" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="10" height="10">
+          <a class="compare" href="#">
+            <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10">
               <path fill="#ffc600" d="M8 2h1.984v8H8zM0 3h1.984v7H0zM4 0h2v10H4z" /></svg>Сравнить</a>
           <a class="basket" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="12" height="12">
               <path fill="#ffc600" d="M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z" />
-              <path fill="#ffc600" d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z" /></svg>Корзина</a>
+              <path fill="#ffc600" d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z" />
+            </svg>
+            Корзина
+          </a>
         </div>
       </div>
       <div class="main-footer-middle-wrapper">
@@ -326,13 +345,19 @@
       <div class="main-footer-bottom-wrapper">
         <ul class="social-list">
           <li class="social-button social-button-fb">
-            <a href="#"><span class="visually-hidden">Девайс на Фейсбуке</span></a>
+            <a href="#">
+              <span class="visually-hidden">Девайс на Фейсбуке</span>
+            </a>
           </li>
           <li class="social-button social-button-inst">
-            <a href="#"> <span class="visually-hidden">Девайс в Инстаграме</span></a>
+            <a href="#">
+              <span class="visually-hidden">Девайс в Инстаграме</span>
+            </a>
           </li>
           <li class="social-button social-button-tw">
-            <a href="#"><span class="visually-hidden">Девайс в Твиттере</span></a>
+            <a href="#">
+              <span class="visually-hidden">Девайс в Твиттере</span>
+            </a>
           </li>
         </ul>
         <a class="htmlacademy-logo" href="//htmlacademy.ru/intensive/htmlcss">
