--- a/catalog.html
+++ b/catalog.html
@@ -406,7 +406,7 @@
     <button class="modal-button" type="button">Закрыть</button>
   </section>
 
-  <script src="js/index.js"></script>
+  <script src="js/index.min.js"></script>
 
 </body>
 
