Добавлен <br> "Моноподы<br> для селфи"

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           </li>
           <li class="categories-list__item categories-list__item-monopod">
             <a class="categories-list__link" href="catalog.html">
-              <p>Моноподы для селфи</p>
+              <p>Моноподы<br>для селфи</p>
             </a>
           </li>
           <li class="categories-list__item categories-list__item-actioncamera">
