Изменены отступы для соответствия PerfectPixel

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Device</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/index.min.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -339,7 +339,7 @@
           </li>
         </ul>
         <p>
-          Тел:<a href="tel:+74954959595">+7 (495) 495-95-95</a>
+          Тел:<a href="tel:+74954959595"> +7 (495) 495-95-95</a>
         </p>
       </div>
       <div class="main-footer-bottom-wrapper">
