--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Моноподы для селфи</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/index.min.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body class="catalog-page">
@@ -246,7 +246,7 @@
               <li class="catalog-item">
                 <div class="catalog-caption-wrap">
                   <h3>
-                    <a href="catalog-item.html">Профессиональная селфи-палка</a>
+                    <a href="catalog-item.html">Профессиональная<br>селфи-палка</a>
                   </h3>
                   <p class="catalog-item-price">1 500 руб.</p>
                 </div>
@@ -364,7 +364,7 @@
           </li>
         </ul>
         <p>
-          Тел:<a href="tel:+74954959595">+7 (495) 495-95-95</a>
+          Тел:<a href="tel:+74954959595"> +7 (495) 495-95-95</a>
         </p>
       </div>
       <div class="main-footer-bottom-wrapper">
