Добавлены адреса для элементов, вызывающих появление попапов

--- a/index.html
+++ b/index.html
@@ -290,10 +290,10 @@
       <section class="contacts">
         <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-        <a class="contacts-map" href="#">
+        <a class="contacts-map" href="https://goo.gl/maps/uwTbjy6nYgWFGP6n7">
           <img src="img/map.jpg" width="560" height="222" alt="Офис Девайс по адресу: улица Строителей дом 15, город Москва">
         </a>
-        <a class="button contacts-button" href="#">Напишите нам</a>
+        <a class="button contacts-button" href="writeus.html">Напишите нам</a>
       </section>
     </div>
 
