Исправлена ошибка отображения "undefined" в пустых полях формы при её открытии

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
     <button class="modal-button" type="button" aria-label="Закрыть">Закрыть</button>
   </section>
 
-  <script src="js/index.min.js"></script>
+  <script src="js/index.js"></script>
 
 </body>
 
