Изменены и подключены минифицированные файлы index.min.css index.min.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Device</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/index.min.css">
 </head>
 
 <body>
@@ -394,7 +394,7 @@
     <button class="modal-button" type="button" aria-label="Закрыть">Закрыть</button>
   </section>
 
-  <script src="js/index.js"></script>
+  <script src="js/index.min.js"></script>
 
 </body>
 
